spring-cloud-kubernetes-integration-tests/kubernetes-client-configmap-polling-and-import-reload/src/test/resources/deployment-mount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-client-configmap-deployment-polling-and-import-reload
spec:
  selector:
    matchLabels:
      app: kubernetes-client-configmap-polling-and-import-reload
  template:
    metadata:
      labels:
        app: kubernetes-client-configmap-polling-and-import-reload
    spec:
      serviceAccountName: spring-cloud-kubernetes-serviceaccount
      containers:
        - name: kubernetes-client-configmap-polling-and-import-reload
          image: docker.io/springcloud/kubernetes-client-configmap-polling-and-import-reload
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          ports:
            - containerPort: 8080

          volumeMounts:
            - name: config-map-volume
              mountPath: /tmp/props

      volumes:
        - name: config-map-volume
          configMap:
            name: reload-as-mount
            items:
              # this will result in 'props.key' being populated with the value from 'from.properties'
              - key: 'from.properties'
                path: key
